--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,9 @@ android:
    - android-sdk-preview-license-.+
    - android-sdk-license-.+
    - google-gdk-license-.+
+
+before_script:
+  - chmod +x gradlew
+  
+script:
+  - ./gradlew clean assembleDebug
