--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
     -->
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
+    <!-- For image search -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera2" android:required="false" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/full_backup_rules"
