--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,6 +272,11 @@
             android:label="@string/view_categories_card_title"
             android:theme="@style/AppTheme.ActionBar"/>
 
+        <activity
+            android:name=".feed.categories.CategoriesResultActivity"
+            android:label="Categories Result"
+            android:theme="@style/AppTheme.ActionBar"/>
+
         <provider
             android:authorities="${applicationId}"
             android:name=".database.AppContentProvider"
