--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
  - ANDROID_API=28
  - ANDROID_BUILD_TOOLS=28.0.3
  - ADB_INSTALL_TIMEOUT=5
+ - CODECOV_TOKEN="8ab569f6-734d-4f49-836a-0dfe8b99375b"
 
 android:
   components:
@@ -46,8 +47,15 @@ jobs:
   - stage: test
     name: "Deploy to GCP"
     script: ./gradlew testDevDebug
+  - stage: coverage
+    name: "Generate Code Coverage"
+    script: ./gradlew jacocoTestReport
 
 stages:
   - build
   - static-analysis
   - test
+  - coverage
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
