--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'jacoco'
 
+jacoco {
+    toolVersion = "0.8.3"
+}
+
 import com.android.build.gradle.internal.dsl.ProductFlavor
 import com.android.ddmlib.DdmPreferences
 
