--- a/app/build.gradle
+++ b/app/build.gradle
@@ -270,6 +270,9 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
     implementation 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
     implementation 'com.google.code.findbugs:jsr305:2.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-perf:16.2.4' // Perfomance Monitoring
+
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
     android.productFlavors.each { flavor ->
         String dep
@@ -338,3 +341,5 @@ private String appId(ProductFlavor flavor) {
     String id = android.defaultConfig.applicationId + (suffix ? ".$suffix" : '')
     return id
 }
+
+apply plugin: 'com.google.gms.google-services'
