--- a/app/build.gradle
+++ b/app/build.gradle
@@ -272,7 +272,8 @@ dependencies {
     implementation 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
     implementation 'com.google.code.findbugs:jsr305:2.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-perf:16.2.4' // Perfomance Monitoring
+    implementation 'com.google.firebase:firebase-perf:16.2.4'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
 
     implementation 'com.android.support:multidex:1.0.3'
 
