[#82] created a new feature activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -234,6 +234,9 @@
             android:name=".onboarding.InitialOnboardingActivity"/>
 
         <activity
+            android:name=".onboarding.newfeatures.NewFeaturesActivity"/>
+
+        <activity
             android:name=".feed.mostread.MostReadArticlesActivity"
             android:theme="@style/AppTheme.ActionBar"/>
 
