--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'jacoco'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 jacoco {
     toolVersion = "0.8.3"
@@ -346,5 +348,3 @@ private String appId(ProductFlavor flavor) {
     String id = android.defaultConfig.applicationId + (suffix ? ".$suffix" : '')
     return id
 }
-
-apply plugin: 'com.google.gms.google-services'
