--- a/.travis.yml
+++ b/.travis.yml
@@ -56,4 +56,4 @@ after_success:
 
 after_failure:
   - pip install -r ./scripts/requirements.txt
-  - python ./scripts/ci_parser.py --id $TRAVIS_JOB_ID --stage $TRAVIS_BUILD_STAGE_NAME --token $AUTH_TOKEN --url $TRAVIS_JOB_WEB_URL
+  - python ./scripts/ci_parser.py --id $TRAVIS_JOB_ID --stage $TRAVIS_BUILD_STAGE_NAME --token $AUTH_TOKEN
