--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -283,6 +283,11 @@
             android:label="Categories Result"
             android:theme="@style/AppTheme.ActionBar"/>
 
+        <activity
+            android:name=".saved.notes.noteitem.NoteItemActivity"
+            android:label="Note"
+            android:theme="@style/AppTheme.ActionBar"/>
+
         <provider
             android:authorities="${applicationId}"
             android:name=".database.AppContentProvider"
